New translation strings.

--- a/config/locales/af.yml
+++ b/config/locales/af.yml
@@ -1,4 +1,20 @@
 af:
+  api:
+    users agree bool: "Jy moet instem tot die terme en voorwaardes, sodat  jou rekening oopgemaak kan word."
+    users confirm password matches: "Die nuwe wagwoord pas nie."
+    users email email: "Die e-pos adres is ongeldig."
+    users email email rfc: "Die e-pos adres wat jy verskaf het is ongeldig."
+    users email not available: "'n Rekening met hierdie e-pos adres is reeds geregistreer."
+    users email not found: "Daar is geen rekening met hierdie e-pos adres nie."
+    users email required: "Jy moet 'n nuwe epos adres verskaf."
+    users hash verified: "Hierdie rekening is alreeds bevestig."
+    users password change: "Jou nuwe wagwoord moet verskil van jou vorige wagwoord."
+    users password length: "Jou wagwoord moet ten minste 6 karakters lank wees."
+    users password required: "Jy moet jou wagwoord insleutel."
+    users username alpha numeric extra: "Die gebruikersnaam mag net uit letters, nommers of strepies bestaan."
+    users username not available: "Die gebruikersnaam wat jy gekies het is nie beskikbaar nie."
+    users username or password invalid: "Die gebruiksnaam of wagwoord wat jy voorsien het is ongeldig."
+    users username required: "Jy moet 'n gebruikernaam insleutel."
   now: "Nou"
   celebrating 50MM: "Vier 50 Miljoen App Installasies!"
   link: "Skakel"
@@ -99,11 +115,13 @@ af:
   try the beta: "Probeer die Beta"
   welcome to the beta: "Welkom by die nuwe YouVersion.com!"
   highlight: "Kleurmerk"
+  comment: "Nuwe kommentaar"
   note: "Nuwe Nota"
   selected: "Gekies"
   chapter: "Hoofstuk"
   bible: "Bybel"
   notes title: "Notas"
+  videos: "Videos"
   friends: "Vriende"
   groups: "Groepe"
   mobile: "Selfoon"
@@ -188,6 +206,8 @@ af:
   users:
     unverified heading: "Amper klaar!"
     unverified message: "Dit lyk asof jy probeer inteken op 'n rekening wat nie volledig opgestel is nie. Jy het nog net een stap oor: Klik op die verifikasie link in die epos wat YouVersion vir jou gestuur het. Indien jy dit nie kry nie, kyk in jou spam leêr of  <a href='%{resend_path}'>herstuur die verifikasie epos</a>."
+    not following you: "Word nie gevolg nie"
+    following you: "Volg jou"
     reset connection: "Jammer, 'n fout het voorgekom. Verwyder asseblief en herskep hierdie verbinding."
     settings: "Stellings"
     no connection friends: "Dit lyk nie of enige van jou %{connection} vriende tans op YouVersion is nie."
@@ -219,8 +239,10 @@ af:
     my profile: "My Profiel"
     edit profile: "Wysig Profiel"
     update profile: "Stoor Profiel"
+    other user profile: "%{gebruikersnaam} se Profiel"
     my password: "Verander My Wagwoord"
     edit password: "Verander Wagwoord"
+    edit password errors: "Die volgende fout(e) het voorkom dat jou wagwoord nie verander kon word nie:"
     picture: "Foto"
     edit picture: "Verander Foto"
     edit notifications: "Bestuur Kennisgewings"
@@ -314,7 +336,7 @@ af:
       international title: "Globale Aard van Kommunikasie"
       international text: "Met erkenning van die globale aard van die internet, stem jy in om te voldoen aan alle plaaslike reëls ten opsigte van aanlyn gedrag en aanvaarbare inhoud. Spesifiek, stem jy in om te voldoen aan alle toepaslike wette met betrekking tot die oordrag van tegniese data wat uitgevoer word van die Verenigde State of die land waarin jy woon."
       content title: "Inhoud Ingedien of Beskikbaar Gemaak vir Insluiting op die Diens"
-      content text: "LifeChurch.tv neem nie eiendomsreg van Inhoud wat u indien of beskikbaar stel vir insluiting op YouVersion nie. Alhoewel, met betrekking tot Inhoud wat u indien of beskikbaar stel vir insluiting op openbaar toeganklike gebiede van YouVersion, vergun u LifeChurch.tv die volgende wêreld-wye, aandeelreg-vry en nie-uitsluitende lisensie(s), as van toepassing:<ul type='none'><li>Met betrekking tot Inhoud wat u indien of beskikbaar stel vir insluiting op openbaar toeganklike gebiede van YouVersion, die lisensie om te gebruik, versprei, weergee, verander, aanpas, openbaar uitvoer, openbaar vertoon en afgeleide werke voorgee van sulke Inhoud  met die doel om die spesifieke YouVersion gebied waaraan die Inhoud beskikbaar gestel of ingedien is te verskaf en bevorder. Hierdie lisensie bestaan alleenlik vir so lank as wat u verkies om sulke Inhoud op YouVersion voort te sit en sal eindig wanneer u of LifeChurch.tv sulke Inhoud van YouVersion verwyder.</li><br><li>Met betrekking tot Inhoud uitsluitend fotos, "
+      content text: "LifeChurch.tv neem nie eiendomsreg van Inhoud wat u indien of beskikbaar stel vir insluiting op YouVersion nie. Alhoewel, met betrekking tot Inhoud wat u indien of beskikbaar stel vir insluiting op openbaar toeganklike gebiede van YouVersion, vergun u LifeChurch.tv die volgende wêreld-wye, aandeelreg-vry en nie-uitsluitende lisensie(s), as van toepassing:<ul type='none'><li>Met betrekking tot Inhoud wat u indien of beskikbaar stel vir insluiting op openbaar toeganklike gebiede van YouVersion, die lisensie om te gebruik, te versprei, weer te gee, te verander, aan te pas, openbaar uit te voer, openbaar te vertoon en afgeleide werk van sulke Inhoud voor te gee  met die doel om die spesifieke YouVersion gebied waaraan die Inhoud beskikbaar gestel of ingedien is, te verskaf en te bevorder. Hierdie lisensie bestaan alleenlik vir so lank as wat u verkies om sulke Inhoud op YouVersion voort te sit en sal eindig wanneer u of LifeChurch.tv sulke Inhoud van YouVersion verwyder.</li><br><li>Met betrekking tot Inhoud, uitsluitend fotos, grafika, audio of video wat u indien of beskikbaar maak vir insluiting op openbaar toeganklike gebiede van YouVersion, die ewige, onherroeplike en ten volle sub-lisensieerbare lisensie om te gebruik, te versprei, te herproduseer, te verander, aan te pas, te publiseer, te vertaal, openbaar te vertoon, openbaar uit te stal en afgeleide werk van sulke Inhoud (in geheel of gedeeltelik) te maak en sulke Inhoud in ander werk in enige formaat of medium te inkorporeer wat nou bekend of later ontwikkel mag word.</li><br><li>'Openbaar toeganklik.' 'Openbaar toeganklike' gebiede van YouVersion is daardie gebiede wat bedoel is om aan die algemene publiek beskikbaar te wees.  Openbaar toeganklike gebiede van YouVersion kan insluit, maar is nie beperk nie, tot boodskapsborde, blog-kommentaar, gemeenskapsgebiede en forums wat aan lede sowel as besoekers oop is .</li></ul>\n\n\n "
       contributions title: "Bydraes tot YouVersion"
       contributions text: "do not translate"
       indemnity title: "Vrywaring en Vrylating van Aanspreeklikheid"
@@ -386,6 +408,7 @@ af:
       publishing partners: "Hou my op hoogte met nuus van YouVersion se inhouds vennote."
       update: "Wysig Kennisgewings"
   bookmarks:
+    new: "Nuwe Boekmerk"
     edit: "Verander"
     delete: "Vee hierdie Boekmerk uit"
     title field: "Titel"
@@ -443,6 +466,7 @@ af:
     you have no plans: "Jy is nie tans ingeskryf vir enige lees planne."
     no public plans: "Geen lees planne is sigbaar vir %{username}."
     filter by lang: "Vernou Planne tot Taal Keuse"
+    plan settings: "Plan Stellings"
     settings: "Verstellings"
     search: "Soek"
     search placeholder: "Soek %{category} Planne"
@@ -452,8 +476,10 @@ af:
     reading completed _ mark and show next: "Volgende: %{next_reference}"
     which reading: "%{current} van %{total}"
     done reading: "Gedoen"
+    no verses: "Geen vers vir vandag nie"
     no content: "Jou leesplan het geen geskeduleerde inhoud vir hierdie dag nie, so dit sal as voltooid gemerk word."
     read today: "Wys Vandag se Leeswerk"
+    devotional: "Bybeldagboek"
     completion status _ below percentage: "Voltooi"
     current progress html: "Dag <b>%{day}</b> van <b>%{total_days}</b>"
     start date _ before date string: "Begin Datum:"
@@ -504,9 +530,17 @@ af:
     catch up successful: "Sukses! Jy is nou op datum met jou leeswerk."
     restart successful: "Jou Plan het weer van vooraf begin."
     subscribe successful: "Fantasties! Jy is nou ingeteken op hierdie plan!"
+    day number: "Dag %{dag}"
     which day in plan: "Dag %{day} van %{total}"
     must start to complete: "Begin hierdie plan sodat jy kan afmerk wat jy gelees het!"
     invalid reference: "Jammer, maar een van die skrif-verwysings bestaan nie in die gekiesde weergawe nie. Probeer om hierbo 'n ander weergawe te kies. Indien jy weer hierdie boodskap kry, lig asseblief ons <a href='%{support_url}'>support team</a> in dat die probleem ontstaan."
+    sidebar notice: "Jy sien 'n leesplan"
+    completed notice: "Veels geluk! Jy het jou leesplan voltooi."
+    exit: "Verlaat"
+    loading sidebar content: "Laai die kant  paal inligting..."
+  licenses:
+    authorized:
+      heading: "Jou inhoud is bemagtig."
   registration:
     placeholder:
       email: "Vul jou e-posadres in."
@@ -519,6 +553,7 @@ af:
     plan blurb: "Dit lyk of jy 'n leesplan wil begin. Slim! Leesplanne kan jou help om die Bybel 'n deel van jou daaglikse lewe te maak. Teken in of skep 'n rekening hieronder en begin sommer dadelik!"
     bookmark blurb: "Dit lyk of jy 'n boekmerk wil skep. Fantasties! Boekmerke help jou om tred te hou met verse wat jy wil memoriseer, deel , of as 'n gunsteling wil merk. Teken in of skep 'n rekening hieronder en begin sommer dadelik!"
     friends blurb: "Dit lyk of jy interaktief met vriende wil verkeer. Goeie idee! Jy sal in staat wees om te deel wat jy leer en om mekaar te help om op datum te bly met lees doelwitte. Teken in of skep 'n rekening hieronder om te begin!"
+    share blurb: "Dit wil voorkom asof jy 'n Skrif wil deel. Wonderlik! Jy kan Skrif deel via Facebook of Twitter.  Teken in of skep hier onder 'n rekening en begin!"
     highlight blurb: "Dit wil voorkom of jy Skrif wil kleurmerk. Fantasties! Kleurmerke help jou om verse te organiseer en om tred te hou met jou gunsteling verse. Teken in of skep 'n rekening hieronder en begin sommer dadelik!"
     note blurb: "Dit lyk of jy 'n skriftuurlike nota wil maak. Mooi gedink! Notas kan jou help om die waarhede wat jy ontdek het in God se Woord te onthou en organiseer. Teken in of skep 'n rekening hieronder en begin sommer dadelik! "
   audio:
@@ -526,6 +561,7 @@ af:
     chapter only: "Jammer, klank is nie beskikbaar vir verse nie. Besigtig in die leser vir hoofstuk klank."
     close player menu: "Maak Toe"
   highlights:
+    choose color: "Kies Kleur"
     creation error: "Jammer, kon nie kleurmerk nie."
     delete error: "Jammer, kon nie kleurmerk verwyder nie."
   searching:
@@ -686,6 +722,7 @@ af:
     try again: "Probeer Weer"
   versions:
     filter: "Filtreer Uitgawes..."
+    see all: "Sien Alle weergawes"
     courtesy of: "%{abbreviation} na jougebring deur %{publisher}"
     learn more: "Leer Meer "
     index title: "Beskikbare Weergawes"
