--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,4 +1,17 @@
 es:
+  api:
+    users confirm password matches: "Las nuevas contrasenas no coinciden."
+    users email email: "La dirección de correo electrónico no es válida."
+    users email email rfc: "La dirección de correo proporcionada es inválida."
+    users email not available: "Una cuenta ya está registrada con esa dirección de correo."
+    users email not found: "No existe una cuenta con esa dirección de correo electrónico."
+    users email required: "Debes entrar una direccion de correo electronico."
+    users hash verified: "Esta cuenta ya ha sido verificada."
+    users password length: "Su contraseña debe tener al menos 6 caracteres."
+    users password required: "Ingrese su contrasena."
+    users username alpha numeric extra: "El nombre de usuario debe de contener letras, números o guiones."
+    users username not available: "El nombre de usuario proporcionado no está disponible."
+    users username or password invalid: "El nombre de usuario o contraseña que usted proveyó es invalido."
   now: "Ahora"
   celebrating 50MM: "¡Celebrando 50 millones de instalaciones!"
   link: "Enlace"
@@ -105,6 +118,7 @@ es:
   chapter: "Capítulo"
   bible: "Biblia"
   notes title: "Notas"
+  videos: "Videos"
   friends: "Amigos"
   groups: "Grupos"
   mobile: "Móvil"
@@ -233,9 +247,9 @@ es:
     edit account_existence: "Eliminar Cuenta"
     delete account button: "Eliminar Mi Cuenta de YouVersion"
     no devices: "No hay ningún dispositivo conectado a su cuenta de YouVersion"
-    no devices download copy: "Basados en la Biblia en-línea de YouVersion.com, la Biblia App es una Biblia Gratis para móviles que puede ser instalada en casi cualquier dispositivo móvil.  La Biblia App permite a los usuarios leer la Biblia, compartir versículos con sus redes sociales, marcar sus pasajes favoritos y mucho más, todo en un formato acorde al creciente estilo de vida móvil.  Visite <a href='https://www.bible.com/descargar'>bible.com/descargar</a> para descargar la Biblia App y ¡conectarse con su cuenta de YouVersion!"
+    no devices download copy: "Basados en la Biblia en-línea de YouVersion.com, la Biblia App es una Biblia Gratis para móviles que puede ser instalada en casi cualquier dispositivo móvil.  La Biblia App permite a los usuarios leer la Biblia, compartir versículos con sus redes sociales, marcar sus pasajes favoritos y mucho más, todo en un formato acorde al creciente estilo de vida móvil.  Visite <a href='http://www.youversion.com/descargar'>youversion.com/descargar</a> para descargar la Biblia App y ¡conectarse con su cuenta de YouVersion!"
     yes delete: "Si, Eliminar Mi Cuenta"
-    account delete success: "Su cuenta de YouVersion ha sido exitosamente eliminada.  Anhelamos que continúe encontrando formas significativas a su vida para interactuar con la Biblia.  Algunas de las siguientes aplicaciones podrían serle de mucha ayuda en su crecimiento y relación con Dios: <a href='https://www.bible.com/free-bible-apps'>http://www.bible.com/free-bible-apps</a>"
+    account delete success: "Su cuenta de YouVersion ha sido exitosamente eliminada.  Anhelamos que continúe encontrando formas significativas a su vida para interactuar con la Biblia.  Algunas de las siguientes aplicaciones podrían serle de mucha ayuda en su crecimiento y relación con Dios: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Si elimina su cuenta, estará permanentemente eliminando toda su información, historial, y personalizaciones en YouVersion.com y la Biblia App, tales como, notas, marcadores, resaltados, etc.  Esta acción no puede ser revertida por usted o nuestro equipo.  Si está seguro de continuar, proceda como indicado a continuación. "
     user recent activity: "Actividad Reciente de %{user}."
     user notes: "Notas de %{user}"
@@ -275,17 +289,17 @@ es:
       policy: "%{youversion} Política de Privacidad"
       intro: "En YouVersion, una página web y aplicación, propiedad y operadas por LifeChurch.tv,que sabe que usted cuida  como la  información es usada y compartida. Esperamos que las siguientes declaraciones  le ayuden a entender cómo YouVersion recoge, utiliza y protege la información que usted nos proporciona en nuestro sitio o aplicación. "
       translation disclaimer: "La política de privacidad se ha traducido para su conveniencia, sin embargo, LifeChurch.tv no ofrece ninguna garantía ni declaración alguna respecto a la exactitud de la traducción. Si se encuentran discrepancias entre el Inglés y la versión traducida, la versión en Inglés prevalecerá."
-      what we collect: "Lo que recogemos y cómo lo usamos"
+      what we collect: "Lo que recogemos y cómo lo usamos\n\n\n\n\n\n\n\n\n\n\n\n"
       your information title: "Información que usted provee"
       your information text: "Cuando se registre en una cuenta de YouVersion, u otro servicio o promoción de LifeChurch.tv que requiera registro, le solicitaremos información personal (como su nombre, correo electrónico y una contraseña para la cuenta). Podemos combinar la información enviada bajo su cuenta, con información de otros servicios de LifeChurch.tv o terceras personas para darle una mejor experiencia y para mejorar la calidad de nuestros servicios. Para ciertos servicios, le podremos dar la opción de no combinar dicha información."
       device id title: "ID de Dispositivo único y localización GPS"
       device id text: "Al acceder a la aplicación de la Biblia YouVersion , podemos recoger el ID de dispositivo único (\"UDID\") y/o dirección IP y/o localización GPS. Usamos  esta información para proporcionar una experiencia personalizada para usted. La información se recoge para determinar el número total de dispositivos únicos que utilizan nuestro servicio o partes de nuestro servicio, para un seguimiento del uso total, analizar datos, y comunicarse con usted con más eficacia. Podemos combinar su UDID con la información de terceros para proveerle una mejor experiencia y para mejorar la calidad de nuestro servicio. Nosotros no compartimos ninguna información personal identificable con terceros, en asociación con su  UDID o localización GPS sin su permiso explícito."
       cookies title: "Las cookies de LifeChurch.tv"
-      cookies text: "Cuando usted visite <a href='https://www.bible.com'>www.bible.com</a>, podremos enviar una o más cookies a su computadora, de modo que podamos identificar su navegador especifico. (Una cookie es simplemente un pequeño archivo de texto conteniendo un listado de caracteres.) El aceptar nuestras cookies nos permite mantener sus preferencias de sesión en sesión. Aunque la mayoría de los navegadores acepta las cookies de modo predeterminado, usted puede ajustar su navegador para rechazar las cookies, o avisarle cuando una cookie le está siendo enviada. Algunas características y servicios de YouVersion pueden no funcionar adecuadamente si las cookies están deshabilitadas."
+      cookies text: "Cuando usted visite <a href='www.youversion.com'>www.youversion.com</a>, podremos enviar una o más cookies a su computadora, de modo que podamos identificar su navegador especifico. (Una cookie es simplemente un pequeño archivo de texto conteniendo un listado de caracteres.) El aceptar nuestras cookies nos permite mantener sus preferencias de sesión en sesión. Aunque la mayoría de los navegadores acepta las cookies de modo predeterminado, usted puede ajustar su navegador para rechazar las cookies, o avisarle cuando una cookie le está siendo enviada. Algunas características y servicios de YouVersion pueden no funcionar adecuadamente si las cookies están deshabilitadas."
       log title: "Información de Registro"
       log text: "Cuando usted utiliza los servicios de YouVersion, nuestros servidores automáticamente registran información enviada por su navegador cuando visita uno de nuestros sitios web. Estos registros de servidor pueden incluir información tal como su solicitud web, dirección de protocolo de Internet, tipo de navegador, lenguaje de navegador, la fecha y hora de su solicitud y una o más cookies que pueden identificar a su ordenador de manera única."
       communications title: "Comunicaciones del usuario"
-      communications text: "La información personal o solicitudes que se presenten a través de <a href='https://www.bible.com/live'>www.bible.com/live</a> serán enviadas al administrador del grupo. El administrador del grupo y/o uno de sus miembros tendrán acceso a esta información. Cuando usted envía un correo electrónico u otra comunicación a cualquier sitio web propiedad de LifeChurch.tv, podemos conservar estas comunicaciones para procesar sus preguntas, responder a sus peticiones y mejorar nuestros servicios."
+      communications text: "La información personal o solicitudes que se presenten a través de <ahret='www.youversion.com/live'>www.youversion.com/live</a> serán enviadas al administrador del grupo. El administrador del grupo y/o uno de sus miembros tendrán acceso a esta información. Cuando usted envía un correo electrónico u otra comunicación a cualquier sitio web propiedad de LifeChurch.tv, podemos conservar estas comunicaciones para procesar sus preguntas, responder a sus peticiones y mejorar nuestros servicios."
       third party title: "Sitios de terceros"
       third party text: "Esta política de privacidad se aplica únicamente a los sitios y aplicaciones que son propiedad y operados por LifeChurch.tv. LifeChurch.tv no puede regular otros sitios web enlazados desde el interior de nuestros sitios web y servicios diversos. Estos otros sitios pueden colocar sus propias cookies u otros archivos en su computadora, recoger datos o solicitar información personal de usted. Usted debe familiarizarse con sus políticas de privacidad únicas, en caso de que decida visitar sus sitios."
       information use title: "¿Cómo utilizamos su información?"
@@ -299,12 +313,12 @@ es:
       enforcement title: "Cumplimiento del título"
       enforcement text: "LifeChurch.tv revisa periódicamente el cumplimiento de esta Política de Privacidad. Cuando recibamos quejas formales por escrito con respecto a cuestiones de privacidad, nuestra política es ponerse en contacto con el usuario en cuestión en relación con su o sus preocupaciones. Vamos a cooperar con las autoridades correspondientes, incluyendo las autoridades locales de protección de datos, para resolver cualquier queja en relación con la transferencia de datos personales que no puedan resolverse entre LifeChurch.tv y un individuo."
       questions title: "Preguntas"
-      questions text: "Cualquier pregunta sobre la política de privacidad puede ser dirigida a: <a href='mailto:legal@youversion.com>legal@youversion.com</a>"
+      questions text: "Cualquier pregunta sobre la política de privacidad puede ser dirigida a: <ahref='mailto:legal@youversion.com>legal@youversion.com</a>"
     terms:
       title: "Términos de Uso"
       translation disclaimer: "Los términos de uso se han traducido para su conveniencia, sin embargo, LifeChurch.tv no ofrece ninguna garantía ni declaración alguna respecto a la exactitud de la traducción. Si se encuentran discrepancias entre el Inglés y la versión traducida, la versión en Inglés prevalecerá."
       acceptance title: "Aceptación de las Condiciones"
-      acceptance text: "Al hacer clic en \"Acepto\", usted reconoce que ha leído y acepto que quedaré vinculado con las CONDICONES DE USO de YouVersion. LifeChurch.tv presta servicios en la Internet y la World Wide Web (la \"Web\") a través de su sitio web en <a href='https://bible.com'>https://bible.com</a> (collectively, 'YouVersion'), con sujeción a las siguientes CONDICIONES DE USO. LifeChurch.tv puede actualizar las CONDICIONES DE USO de vez en cuando, sin previo aviso, y mantiene la versión más reciente de estas CONDICIONES DE USO en: <a href='https://bible.com/terms'>https://bible.com/terms</a>.      Cuando se utiliza YouVersion, también estará sujeto a las guías o normas adicionales que pueden ser publicadas de vez en cuando en el sitio de YouVersion. Todas las guías de uso o reglas se encuentran incorporadas por referencia en estas CONDICIONES DE USO. Violaciónes de estas CONDICIONES DE USO debe ser informado por correo electrónico a<a href='mailto:legal@youversion.com'>legal@youversion.com</a>."
+      acceptance text: "Al hacer clic en \"Acepto\", usted reconoce que ha leído y acepto que quedaré vinculado con las CONDICONES DE USO de YouVersion. LifeChurch.tv presta servicios en la Internet y la World Wide Web (la \"Web\") a través de su sitio web en<a href-'http://youversion.com'>http://youversion.com</a> (collectively,      'YouVersion'), con sujeción a las siguientes CONDICIONES DE USO. LifeChurch.tv puede actualizar las CONDICIONES DE USO de vez en cuando, sin previo aviso, y mantiene la versión más reciente de estas CONDICIONES DE USO en: <a href='http://youversion.com/terms'>http://youversion.com/terms</a>.      Cuando se utiliza YouVersion, también estará sujeto a las guías o normas adicionales que pueden ser publicadas de vez en cuando en el sitio de YouVersion. Todas las guías de uso o reglas se encuentran incorporadas por referencia en estas CONDICIONES DE USO. Violaciónes de estas CONDICIONES DE USO debe ser informado por correo electrónico a<a href='mailto:legal@youversion.com'>legal@youversion.com</a>."
       description title: "Descripción del Servicio"
       description text: "LifeChurch.tv facilita a los Usuarios el acceso a una variedad de servicios a través de YouVersion, incluyendo pero no limitado a, la visualización de vídeo en línea, blogs y comentarios, otras varias herramientas de comunicación, foros y contenido personalizado, sin costo alguno para el usuario. Mediante el uso de YouVersion, usted entiende que tal uso puede incluir comunicaciones de LifeChurch.tv, incluyendo pero no limitado a anuncios de servicio, mensajes administrativos, y otros mensajes a los que han suscrito de forma individual. Usted entiende y acepta que es responsable de obtener acceso a YouVersion, que puede incluir equipo y los honorarios de terceros (tales como cargos de Internet de proveedores de servicios, cargos por tiempo de uso, u otros cargos asociados con la exhibición y entrega de mensajes)​​."
       registration title: "Sus Obligaciones de Registro"
@@ -517,6 +531,10 @@ es:
     must start to complete: "¡Iniciar este plan para salvar lecturas completadas!"
     invalid reference: "Lo siento, una de las refencias de la Escritura para esta lectura puede ser que no existe en la versión elegida. Intente seleccionar una versión diferente, arriba. Si usted continúa viendo este mensaje, por favor permita que nuestro <a href='%{support_url}'>support team</a>  conozca sobre el problema. "
     sidebar notice: "Está revisando un plan de lectura"
+    exit: "Salir"
+  licenses:
+    auth:
+      login link text: "ingresar"
   registration:
     placeholder:
       email: "Introduces tu correo electrónico"
@@ -660,11 +678,11 @@ es:
         read heading: "Lee la Biblia. "
         read description: "Haz tu elección de entre <strong>cientos de Versiones Bíblicas</strong>. Compara dos versiones paralelamente. Elige el tipo y tamaño de letra. Personaliza a tu gusto tu experiencia de la Biblia en-línea."
         study heading: "Estudia la Biblia. "
-        study description: "<strong>Resalta</strong> con tu color favorito, <strong>Marca</strong> tus versículos favoritos, y crea notas acerca de lo que estas aprendiendo. No solo estás invirtiendo tiempo en la Palabra de Dios, estás construyendo una historia de tu interacción con la Biblia."
+        study description: "<strong>Resalta</strong> tus versículos con tu color favorito, <strong>Marca</strong> tus versículos favoritos, y crea notas acerca de lo que estas aprendiendo. No solo estás invirtiendo tiempo en la Palabra de Dios, también estás construyendo una historia de tu interacción con la Biblia."
         subscribe heading: "Subscribete a los Planes de Lectura de la Biblia. "
         subscribe description: "Lee toda la Biblia, enfócate en un tema, o lee un devocional de un buen maestro. Elige un Plan de Lectura y diariamente hallarás una selección bíblica esperando por ti."
         download heading: "Lleva la Biblia Contigo. "
-        download description: "<a href='https://www.bible.com/descargar'>Descarga</a> la Biblia App gratuitamente en cualquier dispositivo móvil. Cuando utilizas la aplicación móvil, tus notas, marcadores, planes de lectura, y más, serán sincronizados automáticamente en todos tus dispositivos."
+        download description: "<a href=' http://www.youversion.com/descargar'>Descarga</a> la Biblia App gratuitamente en cualquier dispositivo móvil. Cuando utilizas la aplicación móvil, tus notas, marcadores, planes de lectura, y más, serán sincronizados automáticamente en todos tus dispositivos."
       get started: "Inicia creando tu cuenta gratuitamente."
       word with you: "Su Palabra está contigo. "
       download action: "Descargar la Biblia App."
