--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,4 +1,20 @@
 ja:
+  api:
+    users agree bool: "アカウント作成には、利用規約に同意いただく必要があります。"
+    users confirm password matches: "新しいパスワードが一致しません。"
+    users email email: "無効なメールアドレスです。"
+    users email email rfc: "入力されたメールアドレスは無効です。"
+    users email not available: "そのメールアドレスで既にアカウントが登録されています。"
+    users email not found: "当該メールアドレスでご利用のアカウントはありません。"
+    users email required: "メールアドレスを入力する必要があります。"
+    users hash verified: "このアカウントは確認済みです"
+    users password change: "新しいパスワードは、古いパスワードとは異なるものにする必要があります。"
+    users password length: "最低6文字のパスワードを設定して下さい。"
+    users password required: "パスワードの入力が必要です。"
+    users username alpha numeric extra: "ユーザ名には、文字、数字とダッシュ記号(-)のみが利用できます。"
+    users username not available: "入力されたユーザ名はご利用いただけません"
+    users username or password invalid: "入力いただいたユーザ名またはパスワードが正しくありません"
+    users username required: "ユーザ名の入力が必要です。"
   now: "現在…"
   celebrating 50MM: "アプリのインストール数が5000万に達しました!"
   link: "リンク"
@@ -99,11 +115,13 @@ ja:
   try the beta: "ベータ版を試してみる"
   welcome to the beta: "新しくなった YouVersion.com へようこそ！"
   highlight: "ハイライト"
+  comment: "新しいコメント"
   note: "新規ノート"
   selected: "選択箇所"
   chapter: "章"
   bible: "聖書"
   notes title: "ノート"
+  videos: "ビデオ"
   friends: "友だち"
   groups: "グループ"
   mobile: "モバイル"
@@ -188,6 +206,8 @@ ja:
   users:
     unverified heading: "あと少しで完了です!"
     unverified message: "登録が完了していないアカウントにサインインしようとされているようです。登録を完了させるための最後のステップは簡単！YouVersionから送られた確認メール内にあった照合用リンクをクリックするだけです。確認メールが見つからない場合は、スパム・フォルダをチェックしていただくか、または<a href='%{resend_path}'>確認メールを再送できますl</a>。"
+    not following you: "さんはあなたをフォローしていません。"
+    following you: "さんがあなたをフォローしています。"
     reset connection: "申し訳ありませんが、エラーが発生しました。一旦この連携を解除した後で、改めて提携させてください。"
     settings: "設定"
     no connection friends: "あなたの %{connection} 友達は、まだ YouVersion 上にはいないようです。"
@@ -219,8 +239,10 @@ ja:
     my profile: "わたしのプロフィール"
     edit profile: "プロフィールの編集"
     update profile: "プロフィールの更新"
+    other user profile: "%{username}さんのプロフィール"
     my password: "パスワードを変更"
     edit password: "パスワードの変更"
+    edit password errors: "以下のエラーが原因でパスワードの変更が出来ませんでした。"
     picture: "写真"
     edit picture: "写真の変更"
     edit notifications: "通知状況の管理"
@@ -229,9 +251,9 @@ ja:
     edit account_existence: "アカウントの削除"
     delete account button: "私のYouVersionアカウントを削除します"
     no devices: "YouVersionアカウントに連携されているデバイスはありません。"
-    no devices download copy: "オンライン聖書（YouVersion.com）に基づいた聖書アプリは無料の携帯用聖書で、ほぼ全ての携帯デバイスにインストールできます。聖書アプリでは、聖書を読んだり、シーシャル･ネットワーク上で聖句をシェアしたり、お気に入りの聖句にブックマークをつけたりと色々なことができ、携帯を活用したライフスタイルにピッタリです。お使いになっている携帯デバイスから<a href='http://www.youversion.com/download'>youversion.com/download</a> にいって、聖書アプリをダウンロードし、あなたのアカウントに連携させましょう！"
+    no devices download copy: "オンライン聖書（YouVersion.com）に基づいた聖書アプリは無料の携帯用聖書で、ほぼ全ての携帯デバイスにインストールできます。聖書アプリでは、聖書を読んだり、シーシャル･ネットワーク上で聖句をシェアしたり、お気に入りの聖句にブックマークをつけたりと色々なことができ、携帯を活用したライフスタイルにピッタリです。お使いになっている携帯デバイスから<a href='https://www.bible.com/download'>bible.com/download</a>にいって、聖書アプリをダウンロードし、あなたのアカウントに連携させましょう！"
     yes delete: "はい、私のアカウントを削除します"
-    account delete success: "あなたのYouVersionアカウントが削除されました。今後も有意義な方法を用いて聖書の言葉に触れていかれますよう、お祈りいたします。別の方法を探されるにあたって、ご参照いただけるアプリをご紹介します。<a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
+    account delete success: "あなたのYouVersionアカウントが削除されました。今後も有意義な方法を用いて聖書の言葉に触れていかれますよう、お祈りいたします。参考までに、その他の便利なアプリをこちらからご覧ください。<a href='https://www.bible.com/free-bible-apps'>http://www.bible.com/free-bible-apps</a>"
     delete account description: "一旦アカウントを削除されますと、YouVersion.com及び聖書アプリ内にある全ての個人情報、履歴、パーソナライズしたもの(ノート、ブックマーク、ハイライトなど)が永久に削除されます。この手続きを無効にすることは、利用者側でも当方担当チームでも不可能です。ご理解のいただいた上でこの手続きを実行する場合は、以下にお進み下さい。"
     user recent activity: "%{user} さんの最近の利用履歴"
     user notes: "%{user} さんのノート"
@@ -277,11 +299,11 @@ ja:
       device id title: "デバイス固有ID (UDID)及びGPSによる位置"
       device id text: "YouVersion 聖書アプリにアクセスする際、ご利用のデバイス固有ID (UDID)、および/あるいはIPアドレスおよび/あるいはGPSによる位置を収集する場合があります。これはユーザの皆様に適したサービスを提供するためです。収集された情報は私たちのサービス（または一部サービス）を利用するデバイス種類の統計をとり、全体の利用量、データ解析、利用者とのコミュニケーションを改善するために利用されます。皆様によりよい形でご利用いただき、サービス品質の向上を図るために、収集された情報を第三者の情報と組み合わせる場合があります。UDIDもしくはGPSによる位置の利用に関連して、皆様の個人情報を許可なく第三者と共有することはありません。"
       cookies title: "LifeChurch.tv のCookie"
-      cookies text: "<a href='www.youversion.com'>www.youversion.com</a>に訪問いただいた際に、ご利用のコンピュータに単数もしくは複数のCookieをこちらから送信することで、ご利用のブラウザをこちらで識別できるようになっています(Cookieは文字列を含むシンプルな短いテキストファイルです)。Cookieを受け入れることで、異なるセッションに渡ってユーザ設定を保持できます。ほとんどのブラウザは標準設定でCookieを受け入れるようになっていますが、ブラウザが全てのCookieの受け入れを拒否する、あるいはCookieが送信された際に確認するよう選択することも可能です。なお、Cookieを無効にされた場合、一部のYouVersionの機能やサービスが正常に機能しない場合があります。"
+      cookies text: "<a href='https://www.bible.com'>www.bible.com</a>に訪問いただいた際に、ご利用のコンピュータに単数もしくは複数のCookieをこちらから送信することで、ご利用のブラウザをこちらで識別できるようになっています(Cookieは文字列を含むシンプルな短いテキストファイルです)。Cookieを受け入れることで、異なるセッションに渡ってユーザ設定を保持できます。ほとんどのブラウザは標準設定でCookieを受け入れるようになっていますが、ブラウザが全てのCookieの受け入れを拒否する、あるいはCookieが送信された際に確認するよう選択することも可能です。なお、Cookieを無効にされた場合、一部のYouVersionの機能やサービスが正常に機能しない場合があります。"
       log title: "ログ情報"
       log text: "YouVersionをご利用の際には、ウェブサイトを訪問された際にブラウザが送信する情報をサーバが自動的に記録します。このサーバログには、ウェブリクエスト、IPアドレス、ブラウザの種類、ブラウザの使用言語、リクエストを送信した日時、単数もしくは複数のCookie（ブラウザを識別）などの情報が含まれます。"
       communications title: "ユーザコミュニケーション"
-      communications text: "<a href='www.youversion.com/live'>www.youversion.com/live</a>から送られた個人情報やリクエストはグループ管理者に送信されます。グループ管理者、および/もしくはグループ管理関係者は、前述の情報にアクセスできます。メールやその他の方法でLifeChurch.tv の所有するウェブサイトへ連絡された際には、皆様からのお問い合わせへの応答、リクエストへの対応、またサービス改善のために連絡内容を保存することがあります。"
+      communications text: "<a href='https://www.bible.com/live'>www.bible.com/live</a>から送られた個人情報やリクエストはグループ管理者に送信されます。グループ管理者、および/もしくはグループ管理関係者は、前述の情報にアクセスできます。メールやその他の方法でLifeChurch.tv の所有するウェブサイトへ連絡された際には、皆様からのお問い合わせへの応答、リクエストへの対応、またサービス改善のために連絡内容を保存することがあります。"
       third party title: "第三者のサイト"
       third party text: "本プライバシー規約は、LifeChurch.tv.が所有・運営するサイトとアプリケーションにのみ適用されます。LifeChurch.tv ではウェブ サイトやサービスからリンクされている他のサイトに対して規制することはできません。これらの他のサイトがご使用のコンピュータに独自のCookieやファイルを設置したり、データを収集したり、個人情報の入力を求める場合があります。これらのサイトを訪問される場合には、各サイトのプライバシー規約をご確認ください。"
       information use title: "個人情報の利用について"
@@ -300,13 +322,13 @@ ja:
       title: "利用規約"
       translation disclaimer: "利用規約は、利用者の便宜を図るために翻訳されています。しかしながら、LifeChurch.tvは翻訳の正確性に関しては、その保証をするものでもそれを代表するものでもありません。英文と翻訳文の間に相違がある場合は、英文に従うものとします。"
       acceptance title: "規約合意"
-      acceptance text: "｢同意します｣をクリックすることによって、YouVersionの利用規約に同意したことの意思表示となります。LifeChurch.tv は、下記の「利用規約」に従って、インターネット及びWorld Wide Web（以下、「ウェブ」）におけるサービスを<a href-'http://youversion.com'>http://youversion.com</a>(以下、「YouVersion」) のウェブサイトを通じて提供しています。LifeChurch.tv は事前の通告無しに「利用規約」を適宜アップデートすることがあります。「利用規約」の最新版は<a href='http://youversion.com/terms'>http://youversion.com/terms</a> よりご覧いただけます。YouVersion のご利用にあたり、利用者は YouVersion のサイト上に適宜掲載される追加的なガイドラインや規約にも従っていただきます。すべてのガイドラインや規約は、ここに言及することにより「利用規約」の一部をなすものとします。これら「利用規約」の違反については、<a href='mailto:legal@youversion.com'>legal@youversion.com</a>までメールでご連絡ください。"
+      acceptance text: "｢同意します｣をクリックすることによって、YouVersionの利用規約に同意したこととなります。LifeChurch.tvでは、下記の「利用規約」に従って、聖書アプリや<a href='https://www.bible.com'>http://bible.com</a>(総称: YouVersion)等のウェブサイトを通じて、インターネット及びWorld Wide Web（以下、「ウェブ」）上でのサービスを提供しています。LifeChurch.tv は事前の通告無しに「利用規約」を適宜アップデートすることがあります。「利用規約」の最新版は<a href='https://www.bible.com/terms'>https://bible.com/terms</a>よりご覧いただけます。YouVersion のご利用にあたり、利用者は YouVersion のサイト上に適宜掲載される追加的なガイドラインや規約にも従っていただきます。すべてのガイドラインや規約は、ここに言及することにより「利用規約」の一部をなすものとします。これら「利用規約」の違反については、<a href='mailto:legal@youversion.com'>legal@youversion.com</a>までメールでご連絡ください。"
       description title: "サービスの内容"
       description text: "LifeChurch.tv はYouVersionを通じてユーザーに各種のサービス（オンラインビデオ映像、ブログへの投稿及びコメント、注釈、その他各種のコミュニケーションの手段、フォーラム、及び個人化したコンテンツ等を含む）を無料で提供しています。YouVersionの使用には LifeChurch.tv から通信（サービス関連の発表、事務的メッセージ、その他個人的に申し込まれたメッセージ等を含む）が含まれることを理解されたものとします。YouVersionへのアクセスには機器の購入や第三者への料金の支払い（インターネット使用料、放送時間料、その他メッセージの表示・配達料等）を要することがありますが、それらはすべて利用者の責任となることを理解され、これに同意されたものとします。"
       registration title: "登録義務 "
       registration text: "<ul><li>YouVersionの登録フォームに、ご自分に関する正確かつ完全な情報（以下「登録データ」）を提供すること、及び</li>»<li>登録データが常に真実、正確、最新かつ完全な情報を含むよう、データを維持し、 速やかに更新することを利用者は理解され、これに同意されたものとします。かかるデータに虚偽の情報、不正確な情報、最新でない情報、あるいは不完全な情報を含むとの疑いがある場合には、LifeChurch.tvにはお客様のアカウント を停止または終止し、YouVersion （またはその一部）の現在または将来の使用を拒否する権利をことがあります。 LifeChurch.tv では特にお子様を含むユーザー全員の安全とプライバシーを重要視しています。このため、13歳以下のお子様のご両親でお子様のYouVersion へのアクセスを認められる方は、YouVersion が幅広い視聴者層に向けにデザインされていることを認めていただく必要があります。したがって、YouVersion がお子様に適切かどうかについては、お子様の法律上の保護者である方の責任で判断していただくことになります。</li></ul>\n"
       privacy title: "YouVersion プライバシー規約"
-      privacy text: "登録データ及びその他の個人情報は、 <a href='http://youversion.com/privacy'>http://youversion.com/privacy</a>に掲載のプライバシー規約に基づいて取り扱います。YouVersion のご使用により、<a href='http://LifeChurch.tv'>Lifechurch.tv</a> による保管・処理・使用目的での米国または他の国への伝達を含めて、上記のプライバシー規約 に従った情報の収集と使用に(プライバシー規約に記載されているように)同意したこととなる旨を理解されたものとします。"
+      privacy text: "登録データ及びその他の個人情報は、 <a href='https://www.bible.com/privacy'>https://bible.com/privacy</a>に掲載のプライバシー規約に基づいて取り扱います。YouVersion のご使用により、<a href='http://LifeChurch.tv'>Lifechurch.tv</a> による保管・処理・使用目的での米国または他の国への伝達を含めて、上記のプライバシー規約 に従った情報の収集と使用に(プライバシー規約に記載されているように)同意したこととなる旨を理解されたものとします。"
       account title: "メンバーアカウント、パスワード、及びセキュリティ"
       account text: "You Version の登録手続き終了後、アカウントを指定し、パスワードをお送りします。パスワードとアカウントの機密性を責任を持って維持してください。ご自分のパスワードまたはアカウントにおける活動はすべてお客様の責任となります。また、<ul><li>パスワードまたはアカウントの無断の使用その他の機密侵害は直ちにLifeChurch.tv に通報すること、及び</li><li> 使用後毎回必ずアカウントを終了することに同意されたものとします。 </li></ul>\n"
       conduct title: "メンバーの品行 "
@@ -386,6 +408,7 @@ ja:
       publishing partners: "YouVersionのコンテンツパートナーからのニュースを受け取る"
       update: "通知設定の更新"
   bookmarks:
+    new: "新しいブックマーク"
     edit: "編集"
     delete: "このブックマークを削除する"
     title field: "タイトル"
@@ -416,7 +439,7 @@ ja:
   plans:
     title: "読書プラン"
     browse by category: "カテゴリー別に閲覧する"
-    browse plans: "%{category}プラン内を閲覧"
+    browse plans: "%{category}プランを閲覧"
     swap list localization: "(<a href='%{swap_link}'>%{swap_locale}で表示</a>)"
     showing language filtered: "%{lang_name}で利用可能なプランのみを表示しています"
     all: "全ての"
@@ -453,8 +476,10 @@ ja:
     reading completed _ mark and show next: "次: %{next_reference}"
     which reading: "%{total} 箇所中の%{current} 箇所"
     done reading: "完了"
+    no verses: "今日の聖句はありません。"
     no content: "ご利用中のプランには、この日に割り当てられた聖書箇所がないので完了済となっています。"
     read today: "今日の読書箇所を見る"
+    devotional: "デボーション"
     completion status _ below percentage: "完了"
     current progress html: "<b>%{total_days}</b> 日中の <b>%{day}</b> 日"
     start date _ before date string: "開始日:"
@@ -505,9 +530,32 @@ ja:
     catch up successful: "おめでとうございます! 読書プランの遅れを取り戻しました。"
     restart successful: "ご利用のプランが最初から再スタートされました"
     subscribe successful: "やったね! このプランに参加しました。"
+    day number: "第 %{day}日目"
     which day in plan: "%{total} 日中の%{day} 日目"
     must start to complete: "このプランに参加すれば、完了箇所を保存できますよ！"
     invalid reference: "申し訳ありませんが、参照聖句の一部が選択された聖書訳ではご覧になれないようです。上記にある別の聖書訳を選んでお試しください。このメッセージが継続して表示される場合は、 <a href='%{support_url}'>support team</a> までお知らせください。"
+    sidebar notice: "読書プランをご覧になっています。"
+    completed notice: "おめでとうございます！読書プランを完了しました。"
+    exit: "終了"
+    loading sidebar content: "サイドバーの内容を読み込み中…"
+  licenses:
+    authorized:
+      heading: "内容が認証されました。"
+      description: "%{vendor} から<a href='%{content_link}'>購入したコンテンツ</a>をYouVersionで見ることが出来ます !"
+    has errors: "リクエストに対してエラーが発生しました。"
+    confirm:
+      email: "購入されたビデオの内容を認証するために、受信トレイに届いているYouVersionからの確認メールをチェックし、メール内にある登録確認リンクをクリックしてください。"
+    request:
+      invalid_vendor_signature: "ライセンス検証に失敗しました： 無効なベンダー署名"
+      invalid_vendor_id: "ライセンス検証に失敗しました： 無効なベンダーID"
+      invalid_item_ids: "ライセンス検証に失敗しました： 無効なアイテム"
+    vendor_transaction_id:
+      duplicate: "トランザクションID： このトランザクションIDは、既に登録されています。"
+    auth:
+      login notice: "購入内容を認証するためには、以下からYouVersionアカウントにログインするか、<a href='/sign-up?source=licenses'>%{signup}</a>してください。"
+      signup notice: "購入内容を認証するには、以下からYouVersionにアカウント登録（無料）をしていただくか、または既にアカウントをお持ちの場合は<a href='/sign-in?source=licenses'>%{login}</a>してください。"
+      signup link text: "無料アカウント登録をする"
+      login link text: "サインイン"
   registration:
     placeholder:
       email: "メールアドレスを入力"
@@ -528,6 +576,7 @@ ja:
     chapter only: "申し訳ありませんが、音読は節単位では利用できません。章単位で音読をリーダーで表示してください。"
     close player menu: "閉じる"
   highlights:
+    choose color: "色の選択"
     creation error: "申し訳ありませんが、ハイライトできません"
     delete error: "申し訳ありませんが、ハイライトを削除できません"
   searching:
@@ -681,6 +730,8 @@ ja:
       translation notes: "脚注"
       cross references: "相互参照"
   app errors:
+    404 plans explanation: "<a href='%{plan_path}'>%{title}</a>のプランを探しておられますか？"
+    404 contact support: "問題が発生しましたか？<a href='%{support_url}'>サポートチーム</a>までご連絡ください。"
     404 explanation: "<a href='%{reader_path}'>ホームページ</a>へ戻ってみてください。\n問題が継続する場合は、<a href='%{support_url}'>support team</a>までご連絡ください。"
     404 message: "申し訳ありませんが、お探しのページは見つかりません。"
     408 message: "申し訳ございませんが、サーバの応答に時間がかかっています。"
@@ -688,6 +739,7 @@ ja:
     try again: "もう一度お試しください。"
   versions:
     filter: "訳の名前から検索・・・"
+    see all: "全ての聖書訳を見る"
     courtesy of: " %{publisher}より%{abbreviation} をお届けします"
     learn more: "詳細"
     index title: "ご利用いただける聖書訳"
