--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -1,4 +1,20 @@
 cs:
+  api:
+    users agree bool: "Pro vytvoření účtu musíte souhlasit se všeobecnými podmínkami."
+    users confirm password matches: "Zadaná nová hesla nesouhlasí."
+    users email email: "Tato e-mailová adresa je neplatná."
+    users email email rfc: "Zadaná e-mailová adresa je neplatná."
+    users email not available: "Účet s touto e-mailovou adresou je již registrován."
+    users email not found: "K této e-mailové adrese neexistuje žádný účet."
+    users email required: "Zadejte vaši e-mailovou adresu. "
+    users hash verified: "Tento účet byl již ověřen."
+    users password change: "Vaše nové heslo musí být jiné než vaše předchozí."
+    users password length: "Vaše heslo musí mít alespoň 6 znaků."
+    users password required: "Zde musíte zadat heslo."
+    users username alpha numeric extra: "Uživatelské jméno může obsahovat jen písmena, čísla nebo pomlčky."
+    users username not available: "Zadané uživatelské jméno není k dispozici."
+    users username or password invalid: "Uživatelské jméno nebo heslo, které jste napsali, není správně."
+    users username required: "Zde musíte zadat uživatelské jméno. "
   now: "Aktuálně"
   celebrating 50MM: "Oslavujeme 50 milionů instalací aplikace!"
   link: "Odkaz"
@@ -19,15 +35,15 @@ cs:
   facebook: "Facebook"
   share success: "Vaše zpráva byla sdílena."
   share error: "Omlouváme, ve vaší zprávě se vyskytla chyba. Prosíme zkuste to znovu."
-  error following user: "Omlouváme se, vyskytla se chyba během následování tohoto uživatele."
+  error following user: "Omlouváme se, vyskytla se chyba během pokusu o následování tohoto uživatele."
   error unfollowing user: "Omlouváme se, vyskytla se chyba během odstraňování následování tohoto uživatele."
   google plus: "Google +"
   connect to: "Připojte se k vašemu %{connection} účtu"
-  connected as user: "Jste připojen/a ke službě %{connection} jako %{username}"
+  connected as user: "Jste připojeni ke službě %{connection} jako %{username}"
   deleted connection: "Úspěšně odstraněno vaše spojení se službou %{connection}"
-  deleted connection error: "Omlouváme se, vyskytla se chyba při odstraňování spojení se službou %{connection}"
+  deleted connection error: "Omlouváme se, vyskytla se chyba při odstraňování spojení se službou %{connection}."
   remove connection: "Odstranit"
-  connection users: "Zde jsou někteří YouVersion uživatelé, s kterými jste spojen/a na %{connection}u:"
+  connection users: "Zde jsou někteří YouVersion uživatelé, s kterými jste spojeni na %{connection}u:"
   connection marketing: "YouVersion je větší zábava s přáteli! Propojte váš YouVersion účet s ostatními sociálními sítěmi, hledejte a následujte vaše přátele na YouVersion. Propojení vašich účtů vám také umožní sdílet zajímavý obsah několika málo kliknutími. Nikdy na váš účet nebudeme nic sdílet bez vašeho souhlasu."
   next step connections: "Další: Propojte vaše účty a najděte své přátele"
   you are now following: "Nyní následujete %{username}"
@@ -94,17 +110,18 @@ cs:
   search: "Hledat"
   book: "Kniha"
   filter book: "Filtrovat knihy..."
-  save: "Uložiť"
-  cancel: "Zrušiť"
+  save: "Uložit"
+  cancel: "Zrušit"
   try the beta: "Vyzkoušejte Beta verzi"
   welcome to the beta: "Vítejte na novém YouVersion.com!"
-  highlight: "Zvýraznit\n"
+  highlight: "Zvýraznit verš"
   comment: "Nový komentář"
   note: "Nová poznámka"
   selected: "Zvolené"
   chapter: "Kapitola"
   bible: "Bible"
   notes title: "Poznámky"
+  videos: "Videa"
   friends: "Přátelé"
   groups: "Skupiny"
   mobile: "Mobil"
@@ -222,9 +239,10 @@ cs:
     my profile: "Můj profil"
     edit profile: "Nastavit profil"
     update profile: "Aktualizovat profil"
-    other user profile: "Profil %{username}"
+    other user profile: "Profil uživatele %{username}"
     my password: "Změnit moje heslo"
     edit password: "Změnit heslo"
+    edit password errors: "Následující chyba/y zabránily ve změně vašeho hesla:"
     picture: "Obrázek"
     edit picture: "Změnit obrázek"
     edit notifications: "Spravovat upozornění"
@@ -233,7 +251,7 @@ cs:
     edit account_existence: "Smazat účet"
     delete account button: "Smazat můj YouVersion účet"
     no devices: "K vašemu YouVersion účtu nejsou připojená žádná zařízení"
-    no devices download copy: "Aplikace Bible je zcela zdarma, je založená na on-line Bibli YouVersion a je ji možno nainstalovat skoro na jakýkoli mobilní telefon. Aplikace Bible umožňuje svým uživatelům číst Bibli, sdílet verše na sociální sítě, vytvářet si záložky ze svých oblíbených pasáží a více&mdash;vše ve formátu, který drží krok s narůstajícím mobilním životním stylem. Navštivte <a href='http://www.youversion.com/download'>youversion.com/download</a> přímo z vašeho mobilního zařízení, stáhněte si aplikaci Bible a připojte si svůj uživatelský účet!"
+    no devices download copy: "Aplikace Bible je zcela zdarma, je založená na on-line Bibli YouVersion a je ji možno nainstalovat skoro na jakýkoli mobilní telefon. Aplikace Bible umožňuje svým uživatelům číst Bibli, sdílet verše na sociální sítě, vytvářet si záložky ze svých oblíbených pasáží a více&mdash;vše ve formátu, který drží krok s narůstajícím mobilním způsobem života. Navštivte <a href='http://www.youversion.com/download'>youversion.com/download</a> přímo z vašeho mobilního zařízení, stáhněte si aplikaci Bible a připojte si svůj uživatelský účet!"
     yes delete: "Ano, smazat můj účet"
     account delete success: "Váš YouVersion účet byl úspěšně vymazán. Doufáme, že budete mít stále další způsoby, jak přijít do kontaktu s Biblí. Některé z těchto aplikacích vám mohou pomoci, až budete pokračovat: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Pokud si smažete váš účet, ztratíte veškeré své informace, historii a údaje (jako poznámky, záložky, zvýraznění atd.) z YouVersion a aplikace Bible. Tento krok již nemůžete vzít zpět. Pokud si jste jistý/á, pokračujte níže."
@@ -468,7 +486,7 @@ cs:
     end date _ before date string: "Datum ukončení:"
     are you behind: "Nenabíráte trochu zpoždění?"
     do you want to reset: "Chcete to zopakovat?"
-    catch up text: "Posunout dnešní čtení k poslednímu dokončenému čtení (den %{last_completed_day} plánu)"
+    catch up text: "Posunout dnešní čtení k poslednímu dočtenému dni (den %{last_completed_day} plánu)"
     catch up description only: "Pokud se dostanete do skluzu ve vašem čtení, nebojte se! Můžete kdykoli posunout vaše aktuální čtení na poslední dokončené čtení."
     catch me up: "Dohnat plán"
     restart description: "Můžete restartovat váš plán. Celá historie čtení a postupu bude vymazána a začnete od začátku."
@@ -516,7 +534,28 @@ cs:
     which day in plan: "Den %{day} z %{total}"
     must start to complete: "Aby jste mohl/a uložit přečtený úsek, je zapotřebí spustit tento plán čtení!"
     invalid reference: "Promiňte, ale v tomto vybraném překladu se zřejmě nenachází odkaz na tento verš. Vyzkoušejte vybrat jiný překlad, viz nahoře. Pokud se vám tato zpráva opět zobrazí , prosím informujte náš <a href='%{support_url}'>tým podpory</a> o tomto problému."
-    sidebar notice: "Prohlížítw si plán čtení"
+    sidebar notice: "Prohlížíte si plán čtení."
+    completed notice: "Gratulujeme! Dokončili jste váš plán čtení."
+    exit: "Konec"
+    loading sidebar content: "Načítání obsahu postranní lišty..."
+  licenses:
+    authorized:
+      heading: "Váš obsah byl autorizován"
+      description: "Nyní můžete <a href='%{content_link}'>procházet váš zakoupený obsah</a> od %{vendor} na YouVersion!"
+    has errors: "Během zpracování vašeho požadavku se vyskytly chyby: "
+    confirm:
+      email: "K autorizování vašeho video obsahu, který jste zakoupili, prosím, zkontrolujte si vaši e-mailovou schránku a klikněte na odkaz, který vám přišel z YouVersion a potvrďte vaši registraci. "
+    request:
+      invalid_vendor_signature: "Ověření licence selhalo: Neplatný podpis poskytovatele"
+      invalid_vendor_id: "Ověření licence selhalo: Neplatné ID poskytovatele"
+      invalid_item_ids: "Ověření licence selhalo: Neplatné položky"
+    vendor_transaction_id:
+      duplicate: "ID transakce: ID této transakce již bylo jednou zaregistrováno"
+    auth:
+      login notice: "Abysme mohli ověřit váš zakoupený obsah, prosíme, přihlášte se přes váš YouVersion účet níže nebo <a href='/sign-up?source=licenses'>%{signup}</a>."
+      signup notice: "Abysme mohli ověřit váš zakoupený obsah, vytvořte si zdarma YouVersion účet níže nebo klikněte na <a href='/sign-in?source=licenses'>%{login}</a> jestliže již účet máte."
+      signup link text: "vytvořte si zdarma účet"
+      login link text: "přihlásit se"
   registration:
     placeholder:
       email: "Zadejte vaši e-mailovou adresu"
@@ -529,7 +568,7 @@ cs:
     plan blurb: "Vypadá to, že chcete začít plán čtení. Chytré! Plány vám můžou pomoci udělat z Bible součást vašeho každodenního života. Přihlašte se nebo si vytvořte účet níže a můžete začít!"
     bookmark blurb: "Vypadá to, že chcete použít záložku. Skvěle! Záložky vám pomůžou uspořádat verše, které se chcete naučit zpaměti, sdílet nebo označit jako oblíbené. Přihlašte se nebo si vytvořte účet viz níže a můžete začít!"
     friends blurb: "Vypadá to, že se chcete spojit s přáteli. Dobrý nápad! Budete moci sdílet, co se právě učíte, a pomáhat ostatním udržet odhodlání v jejich plánech číst pravidelně Bibli. Přihlašte se nebo si vytvořte účet níže a můžete začít!"
-    share blurb: "Zdá se, že chcete sdílet písmo. Skvěle! Budete moci sdílet písmo přes Facebook nebo Twitter. Přihlašte se nebo si založte účet níže a můžete začít!"
+    share blurb: "Zdá se, že chcete sdílet verše. Skvěle! Budete moci sdílet verše přes Facebook nebo Twitter. Přihlašte se nebo si založte účet viz níže a můžete začít!"
     highlight blurb: "Zdá se, že chcete zvýraznit nějaké verše. Výborně! Zvýraznění vám pomáhají organizovat a udržovat přehled o vašich oblíbených verších. Přihlašte se, nebo si založte účet a můžete začít."
     note blurb: "Vypadá to, že chcete vytvořit poznámku o verši. Dobrý nápad! Poznámky vám pomůžou organizovat a zapamatovat pravdy, které objevíte v Božím Slově. Přihlašte se nebo se zaregistrujte a můžete začít!"
   audio:
@@ -691,6 +730,8 @@ cs:
       translation notes: "Poznámky pod čarou"
       cross references: "Křížové odkazy"
   app errors:
+    404 plans explanation: "Nehledali jste náhodou plán <a href='%{plan_path}'>%{title}</a>?"
+    404 contact support: "Máte potíže? Kontaktujte naši <a href='%{support_url}'>podporu</a>."
     404 explanation: "Možná zkuste začít znovu na <a href='%{reader_path}'>úvodní stránce</a>. Stále máte potíže? Kontaktujte náš <a href='%{support_url}'>tým podpory</a>."
     404 message: "Je nám to líto, ale stránka, kterou hledáte nemohla být nalezena."
     408 message: "Omlouváme se, ale naše servery naneštěstí neodpověděly včas."
@@ -698,7 +739,7 @@ cs:
     try again: "Zkuste to znovu"
   versions:
     filter: "Filtrovat překlady..."
-    see all: "Podívat se na všechny verše"
+    see all: "Vidět všechny překlady"
     courtesy of: "%{abbreviation} Vám přináší %{publisher}"
     learn more: "Zjistit více"
     index title: "Dostupné překlady"
