--- a/config/locales/mk.yml
+++ b/config/locales/mk.yml
@@ -1,7 +1,23 @@
 mk:
+  api:
+    users agree bool: "Мора да се согласите со Условите за користење за да се претплатите."
+    users confirm password matches: "Лозинките не се совпаѓаат."
+    users email email: "Адресата на е-поштата е невалидна."
+    users email email rfc: "Адресата на е-поштата која ја напишавте е невалидна."
+    users email not available: "Веќе постои сметка која е регистрирана на таа адреса на е-пошта."
+    users email not found: "Не постои сметка со таа адреса на е-пошта."
+    users email required: "Мора да внесете адреса на е-пошта."
+    users hash verified: "Оваа сметка веќе била потврдена."
+    users password change: "Вашата нова лозинка мора да биде различна од претходната."
+    users password length: "Лозинката мора да биде најмалку шест знаци."
+    users password required: "Мора да внесете лозинка."
+    users username alpha numeric extra: "Корисничкото име мора да се состои од букви, бројки или минуси."
+    users username not available: "Корисничкото име кое го побаравте не е достапно."
+    users username or password invalid: "Корисничкото име или лозинката кои ги напишавте се невалидни."
+    users username required: "Мора да внесете корисничко име."
   now: "Сега"
   celebrating 50MM: "Славиме 50 Милиони инсталирани апликации!"
-  link: "врска"
+  link: "Врска"
   site search: "YouVersion пребарување"
   auth error: "Има проблем со корисничкото име или лозинка. Најави се на YouVersion за да продолжиш."
   download: "Симни"
@@ -98,13 +114,14 @@ mk:
   cancel: "Откажи"
   try the beta: "Пробај ја бета верзијата"
   welcome to the beta: "Добредојде во новиот YouVersion.com!"
-  highlight: "Означи"
+  highlight: "Означи стих"
   comment: "Нов коментар"
   note: "Нова белешка"
   selected: "Селектирано"
   chapter: "Глава"
   bible: "Библија"
   notes title: "Белешки"
+  videos: "Видеа"
   friends: "Пријатели"
   groups: "Групи"
   mobile: "Мобилен"
@@ -188,7 +205,7 @@ mk:
     view in reader: "Погледни го %{reference} во читачот"
   users:
     unverified heading: "Скоро готово!"
-    unverified message: "Изгледа се обидуваш да се логираш на сметка која не е креирана целосно.  Треба уште еден чекор: едноставно кликни на врската за конфирмација во маилот  за потврда кој го прими од YouVersion. Не можеш да го најдете? Провери во спам или\n<a href='%{resend_path}'>прати повторно мејл за потврда</a>."
+    unverified message: "Изгледа се обидуваш да се логираш на сметка која не е креирана целосно.  Треба уште еден чекор: едноставно кликни на линкот за конфирмација во имејлот за потврда кој го прими од YouVersion. Не можеш да го најдеш? Провери во спам или\n<a href='%{resend_path}'>прати повторно мејл за потврда</a>."
     not following you: "не те следи"
     following you: "те следи"
     reset connection: "Грешка при конекцијата. Ве молиме отстранете и реконектирајте ја конекцијата."
@@ -225,6 +242,7 @@ mk:
     other user profile: "профилот на %{username}"
     my password: "Промени ја мојата лозинка"
     edit password: "Смени ја лозинката"
+    edit password errors: "Следниве грешки оневозможуваат да ја ажурирате вашата лозинка:"
     picture: "Слика"
     edit picture: "Смени ја сликата"
     edit notifications: "Управувај со пораките"
@@ -233,7 +251,7 @@ mk:
     edit account_existence: "Избриши профил"
     delete account button: "Избриши го мојот YouVersion профил"
     no devices: "Ниту еден уред не е поврзан со твојот YouVersion профил"
-    no devices download copy: "Врз основа на онлајн Библијата, Библиската Апликација, YouVersion.com е бесплатна мобилна Библија која може да се инсталира речиси на секој телефон. Библиската Апликација овозможува корисниците да ја читаат Библијата, да споделуваат стихови на нивните социјални мрежи, да ги обележуваат омилените стихови, и повеќе&mdash; сето тоа во формат кој е во тек со нивниот мобилен животен стил. Посети ја<a href='http://www.youversion.com/download'>youversion.com/download</a> на твојот телефон за да ја симнеш Библиската Апликација и да се поврзеш со твојот профил!"
+    no devices download copy: "Напојувана од Библијата достапна на Интернет преку YouVersion.com, апликацијата „Библија“ е бесплатна мобилна Библија која може да се инсталира речиси на секој телефон. Апликацијата „Библија“ овозможува корисниците да ја читаат Библијата, да споделуваат стихови на нивните социјални мрежи, да ги обележуваат омилените стихови, и повеќе &mdash; сето тоа во формат кој е во тек со нивниот мобилен животен стил. Посети ја <a href='https://www.bible.com/download'>bible.com/download</a> на твојот телефон за да ја симнеш апликацијата „Библија“ и да се поврзеш со твојот профил!"
     yes delete: "Да, избриши го мојот YouVersion профил"
     account delete success: "Твојот YouVersion профил беше успешно избришан. Се надеваме дека ќе продолжиш да ја користиш Библијата на значаен начин. Некои од следниве апликации можат да ти помогнат понатаму: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a> "
     delete account description: "Ако го избришеш профилот, засекогаш ќе ги изгубиш сите информации, историја и персонализација (н.п.р. белешки, обележувачи, означувања, итн.) на YouVersion.com и Библиската Апликација. Оваа акција не може да ја поврати ниту ти ниту нашиот тим. Ако сигурно го сакаш ова, продолжи понатаму. "
@@ -278,7 +296,7 @@ mk:
       what we collect: "Кои информации ги собираме и како ги користиме"
       your information title: "Информации кои ги даваш"
       your information text: "не преведувај"
-      device id title: "Единствен ID на уредот"
+      device id title: "Единствен ID на уредот и GPS локација"
       device id text: "не преведувај"
       cookies title: "LifeChurch.tv колачиња"
       cookies text: "не преведувај"
@@ -290,7 +308,7 @@ mk:
       third party text: "не преведувај"
       information use title: "не преведувај"
       information use text: "Кога се пријавуваш за услуга која бара регистрација, бараме од тебе лични информации. Ако LifeChurch.tv сака да ги употреби тие информации на поразличен начин од целта за која биле прибрани, ќе побараме дозвола од тебе за таа употреба. Не прибираме или користиме лични информации за цели поразлични од оние опишани во Полисата за Приватност и/или во белешките за конкретните услуги, освен ако немаме дозвола од тебе за тоа. Можеш да одбиеш да дадеш лични информации на која било наша услуга, што значи LifeChurch.tv можеби нема да може да ти ја овозможи истата."
-      information security title: "Безбедност на информациите"
+      information security title: "Како ги заштитуваме вашите информации?"
       information security text: "не преведувај"
       data integrity title: "Интегритет на податоците"
       data integrity text: "не преведувај"
@@ -299,10 +317,10 @@ mk:
       enforcement title: "Присила"
       enforcement text: "не преведувај"
       questions title: "Прашања"
-      questions text: "Прашања за политиката на приватност можат да се упатат на: %{mailto_link}"
+      questions text: "Прашања за политиката на приватност можат да се упатат на: <a href='mailto:legal@youversion.com'>legal@youversion.com</a>"
     terms:
       title: "Услови за користење"
-      translation disclaimer: "Условите за користење се преведени само информативно, но сепак, LifeChurch.tv не дава никакви гаранции или застапувања во однос на точноста на преводот. Ако било кои разлики се најдатт помеѓу англиската и преведената верзија, англиската верзија е официјална."
+      translation disclaimer: "Условите за користење се преведени само информативно, но сепак, LifeChurch.tv не дава никакви гаранции или застапувања во однос на точноста на преводот. Ако било кои разлики се најдат помеѓу англиската и преведената верзија, англиската верзија е официјална."
       acceptance title: "Прифаќање на условите"
       acceptance text: "не преведувај"
       description title: "Опис на услугите"
@@ -515,8 +533,29 @@ mk:
     day number: "Ден %{day}"
     which day in plan: " %{day} ден од вкупно %{total} денови"
     must start to complete: "Започни со овој план за да го зачуваш целото читање!"
-    invalid reference: "Библиските референци за ова читање не  постои во избраната верзија. Избори различни верзија. Ако продолжиш да ја добиваш оваа порака, ве молиме сподели ја со нашите\n<a href='%{support_url}'>support team</a> know about the issue."
+    invalid reference: "Библиските референци за ова читање не  постојат во избраната верзија. Избери различна верзија. Ако продолжиш да ја добиваш оваа порака, ве молиме сподели ја со нашиот\n<a href='%{support_url}'>тим за подршка</a>."
     sidebar notice: "Го гледате планот за читање"
+    completed notice: "Честитки! Вие го завршивте вашиот План за читање."
+    exit: "Излез"
+    loading sidebar content: "Ја вчитувам страничната лента..."
+  licenses:
+    authorized:
+      heading: "Вашата содржина е одобрена"
+      description: "Сега можете да <a href='%{content_link}'>погледнете што сте купиле</a> од %{vendor} на YouVersion!"
+    has errors: "Има проблем со вашето барање:"
+    confirm:
+      email: "За да ја авторизираме видео содржината која ја купивте, ве молиме проверете го вашето е-поштенско сандаче, побарајте дали ви пристигнало писмо од YouVersion и кликнете на врската во тоа писмо за да ја потврдите регистрацијата."
+    request:
+      invalid_vendor_signature: "Проверката на лиценцата врати грешка: Невалиден потпис на производителот"
+      invalid_vendor_id: "Проверката на лиценцата врати грешка: Невалидна идентификација на производителот"
+      invalid_item_ids: "Проверката на лиценцата врати грешка: Невалидни артикли"
+    vendor_transaction_id:
+      duplicate: "Идентификација на трансакцијата: Оваа идентификација веќе е регистрирана"
+    auth:
+      login notice: "За проверка на содржината што сте ја купиле, ве молиме пријавете се со вашата YouVersion сметка подолу или <a href='/sign-up?source=licenses'>%{signup}</a>."
+      signup notice: "За проверка на содржината што сте ја купиле, претплатете се на бесплатна YouVersion сметка подолу или  <a href='/sign-in?source=licenses'>%{login}</a> ако веќе имате сметка."
+      signup link text: "претплатете се на бесплатна сметка"
+      login link text: "пријавете се"
   registration:
     placeholder:
       email: "Внеси ја твојата имејл адреса"
@@ -529,7 +568,7 @@ mk:
     plan blurb: "Изгледа сакаш да почнеш со план за читање. Паметно! Тој може да помогне, Библијата да стане дел од твојот секојдневен живот. Пријави се или создај профил!"
     bookmark blurb: "Изгледа сакаш да користиш обележувач. Одлично! Обележувачите помагаат да водиш евиденција за стиховите кои сакаш да ги научиш, споделиш или означиш како омилени. Најави се или создај профил!"
     friends blurb: "Изгледа сакаш да комуницираш со пријателите. Добра идеја! Можете да споделите што научивте и да си помогнете меѓусебе да не отстапувате од целите за читање. Најави се или создади профил! "
-    share blurb: "Се чини како да сакате да споделите стих. Одлично! Во можност сте да го споделите стихот преку Фејсбук или Твитер. Логирајте сѐ или креирајте сметка долу и започнете!"
+    share blurb: "Се чини како да сакате да споделите стих. Одлично! Во можност сте да го споделите стихот преку Facebook или Twitter. Пријавете се или отворете сметка подолу и започнете!"
     highlight blurb: "Изгледа сакаш да го означиш стихот. Одлично! Означувањата помагаат да ги организираш и да водиш евиденција за твоите омилени стихови. Најави се или создај профил и почни!"
     note blurb: "Изгледа сакаш да фаќаш белешки за стихот. Добро размислуваш! Белешките ти помагаат да ги запомниш и организираш вистините кои ги откриваш од Божјиот Збор. Најави се или создади профил и почни! "
   audio:
@@ -591,7 +630,7 @@ mk:
     translation title: "Нашиот тим на преведувачи"
     learn more: "Дознај повеќе"
     bible dot com title: "Што се случи со стариот сајт Bible.com?"
-    bible dot com copy: "Ако ги баратеChrist Unlimited Ministries од Бад и Бети Милер или стариот Bible.com сајт, посетете го нивниот нов сајт на <a href='http://www.bibleresources.org'>BibleResources.org</a>"
+    bible dot com copy: "Ако ги барате Christ Unlimited Ministries од Бад и Бети Милер или стариот Bible.com сајт, посетете го нивниот нов сајт на <a href='http://www.bibleresources.org'>BibleResources.org</a>"
   press page:
     title: "Дел за медиуми"
     contact header: "Контакт информации за медиуми"
@@ -615,7 +654,7 @@ mk:
       logos: "YouVersion пакет на логоа"
       icons: "Икони на Библиската апликација"
       infographic: "Инфографик: Библиска Апликација статистика и користење"
-      devices: "Колекција на слики:Уреди"
+      devices: "Колекција на слики: Уреди"
       lifestyle: "Собирање на слики: Lifestyle"
       screencast: "YouVersion Screencast"
     links title: "Медија линкови"
@@ -664,7 +703,7 @@ mk:
         subscribe heading: "Претплати се на Библиски план."
         subscribe description: "Покриј ја целата Библија, фокусирај се на тема, или читај молитвеник од надарен учител. Одбери го твојот план и секој ден ќе најдеш Библиска селекција која те чека тебе."
         download heading: "Земи ја Библијата со себе."
-        download description: "<a href='http://youversion.com/download'>Download</a> бесплатна апликација Библија за секој мобилен уред. Кога ја користиш мобилната апликација, твоите белешки, обележувачи, подвлекувања, планови, и сѐ друго ќе бидат автоматски синхронизирани на сите твои уреди."
+        download description: "<a href='http://youversion.com/download'>Симни ја</a> бесплатната апликација Библија за секој мобилен уред. Кога ја користиш мобилната апликација, твоите белешки, обележувачи, подвлекувања, планови, и сѐ друго ќе бидат автоматски синхронизирани на сите твои уреди."
       get started: "Започни со твојата бесплатна сметка."
       word with you: "Божјиот збор е со тебе."
       download action: "Симни ја апликацијата Библија"
@@ -679,7 +718,7 @@ mk:
       font2: "Georgia"
       font3: "Baskerville"
       font4: "Verdana"
-      font size: "Големина:"
+      font size: "Големина на фонт:"
       small: "Мал"
       medium: "Среден"
       large: "Голем"
@@ -687,28 +726,30 @@ mk:
       contrast: "Контраст"
       'on': "Вклучено"
       'off': "Исклучено"
-      extras: "Дополноително:"
+      extras: "Дополнително:"
       translation notes: "Фусноти"
       cross references: "Референци"
   app errors:
-    404 explanation: "Пробај уште еднаш на <a href='%{reader_path}'>home page</a>. Се уште имате проблем? контактирајте го тогаш <a href='%{support_url}'>support team</a>."
+    404 plans explanation: "Дали го барате Планот за читање <a href='%{plan_path}'>%{title}</a>?"
+    404 contact support: "Имате проблеми? Стапете во контакт со нашата <a href='%{support_url}'>техничка поддршка</a>."
+    404 explanation: "Пробај уште еднаш на <a href='%{reader_path}'>home page</a>. Се уште имате проблем? контактирајте го тогаш <a href='%{support_url}'>тимот за подршка</a>."
     404 message: "Страницата не може да се најде."
-    408 message: "Среверот не одговори навреме."
-    408 explanation: "Јавено ни е и во првата можност ќе го погледнеме проблемот.  Давидиме дали можеме да го решиме проблемот!"
+    408 message: "Серверот не одговори навреме."
+    408 explanation: "Јавено ни е, и во првата можност ќе го погледнеме проблемот.  Да видиме дали можеме да го решиме проблемот!"
     try again: "Обиди се повторно"
   versions:
     filter: "Филтрирај верзии..."
-    see all: "Види ги сите верзии"
+    see all: "Види ги сите верзии..."
     courtesy of: "%{abbreviation} обезбедено од %{publisher}"
     learn more: "Дознај повеќе"
     index title: "Достапни верзии"
     publisher widget title: "Автор"
     visit publisher: "Посети го сајтот на издавачот"
-    read title: "Прочитај ја оваа верзија"
+    read title: "Прочитај ја верзијата"
     other versions: "Други верзии од овој издавач"
     number of versions field: "Вкупно верзии:"
     number of languages field: "Вкупно јазици:"
     language and count: "%{language_name} (%{language_count})"
-    public domain: "Јавен пристап"
+    public domain: "Јавен Domain"
     loading: "Се вчитуваат повеќе верзии..."
     load error: "Се извинуваме, има проблем со вчитување на повеќе верзии. Затворете го менито и обидете се повторно со отварање на истото."
